@@ -75,7 +75,7 @@ bootstrap FlexDLL, you will need to ensure that the directory to which you
 install FlexDLL is included in your `PATH` environment variable. Note: binary
 distributions of FlexDLL are compatible only with Visual Studio 2013 and
 earlier; for Visual Studio 2015 and later, you will need to compile the C
-objects from source, or build ocaml using the flexdll target.
+objects from source, or bootstrap FlexDLL (see below).
 
 The base bytecode system (ocamlc, ocaml, ocamllex, ocamlyacc, ...) of all three
 ports runs without any additional tools.
@@ -294,7 +294,7 @@ install FlexDLL separately -- indeed, if you do install FlexDLL separately, you
 may need to be careful to ensure that `ocamlopt` picks up the correct `flexlink`
 in your `PATH`.
 
-You must place the FlexDLL sources for Version 0.35 or later in the directory
+You must extract the FlexDLL sources for Version 0.35 or later in the directory
 `flexdll/` at the top-level directory of the OCaml distribution.  This can be
 done in one of three ways:
 
@@ -309,12 +309,9 @@ done in one of three ways:
 +
   git submodule update --init
 
-OCaml is then compiled as normal for the port you require, except that before
-building the compiler itself, you must compile `flexdll`, i.e.:
+OCaml is then compiled normally for the port you require.
 
-  make flexdll
   make
-  make flexlink.opt
   make install
 
  * You should ignore the error messages that say ocamlopt was not found.
