@@ -15,8 +15,10 @@ OCaml 4.10 maintenance branch
 
 ### Build system:
 
-- #10135: Speed-up the FlexDLL bootstrap by building a separate non-shared
-  version of the runtime and keeping shared artefacts.
+- #10135: Overhaul the FlexDLL bootstrap process. A separate non-shared version
+  of the runtime is built, and shared artefacts are no longer built twice. The
+  flexdll target no longer has to be separately built, but is folded into the
+  default make target.
   (David Allsopp, review by Sébastien Hinderer)
 
 - #10835 Disable DT_TEXTREL warnings on x86 32 bit architecture by passing
